--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:css -- --optimize",
+    "build": "npm run build:cjs && npm run build:esm",
     "postbuild": "npm run build:test",
     "build:cjs": "BABEL_ENV=cjs babel src/ -d lib/",
     "build:esm": "BABEL_ENV=esm babel src/ -d esm/",
@@ -60,7 +60,7 @@
     "@storybook/addon-links": "^5.3.21",
     "@storybook/addon-options": "^5.3.21",
     "@storybook/addons": "^5.3.21",
-    "@storybook/react": "^5.3.21",
+    "@storybook/react": "^7.6.0",
     "@welldone-software/why-did-you-render": "^3.6.0",
     "airbnb-js-shims": "^2.2.1",
     "aphrodite": "^2.4.0",
@@ -75,15 +75,14 @@
     "cheerio": "=1.0.0-rc.3",
     "clean-css": "^4.2.3",
     "cross-env": "^5.2.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-helper": "^1.3.9",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-react-with-styles": "^2.4.0",
     "git-directory-deploy": "^1.5.1",
     "imports-loader": "^0.8.0",
     "in-publish": "^2.0.1",
@@ -98,12 +97,11 @@
     "mocha-wrap": "^2.1.2",
     "moment": "^2.29.1",
     "moment-jalaali": "^0.7.4",
+    "next": "^15.0.0",
     "nyc": "^10.3.2",
     "raw-loader": "^0.5.1",
-    "react": "^0.14 || ^15.5.4 || ^16.1.1",
-    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1",
-    "react-with-styles-interface-aphrodite": "^6.0.1",
-    "react-with-styles-interface-css-compiler": "^2.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rimraf": "^2.7.1",
     "safe-publish-latest": "^1.1.4",
     "sass-loader": "^7.3.1",
@@ -114,7 +112,6 @@
     "webpack": "^4.46.0"
   },
   "dependencies": {
-    "airbnb-prop-types": "^2.16.0",
     "color2k": "~1.1.1",
     "consolidated-events": "^1.1.1 || ^2.0.0",
     "enzyme-shallow-equal": "^1.0.4",
@@ -127,15 +124,13 @@
     "react-moment-proptypes": "^1.8.1",
     "react-outside-click-handler": "^1.3.0",
     "react-portal": "^4.2.1",
-    "react-with-direction": "^1.4.0",
-    "react-with-styles": "~4.1.0",
-    "react-with-styles-interface-css": "^6.0.0"
+    "styled-components": "^6.0.0"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.0.0",
     "moment": "^2.18.1",
-    "react": "^0.14 || ^15.5.4 || ^16.1.1",
-    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1"
+    "react": "^0.14 || ^15.5.4 || ^16.1.1 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1 || ^17.0.0 || ^18.0.0"
   },
   "engines": {
     "node": ">=0.10"
