--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "21.8.0",
   "description": "A responsive and accessible date range picker component built with React",
   "main": "index.js",
+  "module": "esm/index.js",
   "scripts": {
     "prebuild": "npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
@@ -34,6 +35,8 @@
     "version:major": "npm --no-git-tag-version version major",
     "preversion": "npm run test && npm run check-changelog && npm run check-only-changelog-changed",
     "postversion": "git commit package.json CHANGELOG.md -m \"Version $npm_package_version\" && npm run tag && git push && git push --tags && npm publish --registry=https://registry.npmjs.org/",
+    "prepare": "npm run build",
+    "postinstall": "npm run build",
     "prepublish": "in-publish && safe-publish-latest && npm run build || not-in-publish",
     "postpublish": "[ \"${npm_config_tag:-latest}\" != latest ] || npm run gh-pages",
     "check-changelog": "expr $(git status --porcelain 2>/dev/null| grep \"^\\s*M.*CHANGELOG.md\" | wc -l) >/dev/null || (echo 'Please edit CHANGELOG.md' && exit 1)",
@@ -131,6 +134,13 @@
     "react": "^0.14 || ^15.5.4 || ^16.1.1 || ^17.0.0 || ^18.0.0",
     "react-dom": "^0.14 || ^15.5.4 || ^16.1.1 || ^17.0.0 || ^18.0.0"
   },
+  "files": [
+    "lib",
+    "esm",
+    "index.js",
+    "initialize.js",
+    "constants.js"
+  ],
   "engines": {
     "node": ">=0.10"
   }
